k8s/app/templates/karma/karma-depoly.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: karma
  name: karma
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: karma
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: karma
    spec:
      containers:
      - image: ghcr.io/prymitive/karma:latest
        imagePullPolicy: IfNotPresent
        name: karma
