k8s/app/templates/karma/karma-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: karma
  name: karma
  namespace: monitoring
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: karma
